<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bprats.contactregister.dataContactActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textSize="@dimen/title1"
        android:layout_marginLeft="@dimen/left"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/top"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreCompleto"
        android:textSize="@dimen/textForm"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginLeft="@dimen/left"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >


        <TextView
            android:id="@+id/tvFN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNac"
            android:textSize="@dimen/textForm"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="@dimen/left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:onClick="call">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/textForm"
            android:layout_marginLeft="@dimen/left"
            android:textColor="@color/colorPrimaryText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        android:onClick="email">

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/email"
            android:textSize="@dimen/textForm"
            android:layout_marginLeft="@dimen/left"
            android:textColor="@color/colorPrimaryText"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >


        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrContacto"
            android:textSize="@dimen/textForm"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_datos"
            android:theme="@style/RaisedButton"/>


    </LinearLayout>



</LinearLayout>
